--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,6 @@
 @import "./font-awesome";
 @import "side_bar";
 @import "main_chat";
+@import "user";
+@import "config/colors";
+@import "modules/flash";
