--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -31,13 +31,15 @@
   font-size: 15px;
 
   .group {
-  margin-bottom: 40px;
-  
+    margin-bottom: 40px;
+
     &__name {
+      color: #FFFFFF;
       font-weight: 11px;
       margin-bottom: 5px;
     }
     &__comment {
+      color: #FFFFFF;
       font-size: 11px;
     }
   } 
