--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -3,13 +3,15 @@
     .sidebar__name
       = current_user.name
     .sidebar__mark
-      =link_to "#", class: "sidebar__btn" do
+      =link_to new_group_path, class: "sidebar__btn" do
         = icon('fas', 'edit')
       =link_to edit_user_path(current_user), class: "sidebar__btn" do
         = icon('fas', 'cog')
   .sidebar-contents
-    .group
-      .group__name
-        %p test2
-      .group__comment
-        %p さようなら
+    - current_user.groups.each do |group|
+      .group
+        =link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__comment
+            メッセージはまだありません
