グループメッセージ表示

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,24 +9,19 @@
       .header__second
         %span Edit
   .contents
-    .contents__message
-      .contents__message__user
-        .contents__message__user__name
-          %p test-user
-        .contents__message__user__date
-          %p 日付
-      .contents__message__text
-        %p おはよう
+    = render @messages
+
   .form
-    .send-box
-      .input-box
-        .input-box__text
-          %input{class: "input-box__text", placeholder: "type a message"}
-        .input-box__image
-          %label{class: "input-box__image"}
-            = icon('fas', 'image')
-            %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn",  value: "Send"}
+    = form_for [@group, @message] do |f|
+      .send-box
+        .input-box
+          .input-box__text
+            = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+          .input-box__image
+            = f.label :image, class: 'input-box__image' do
+              = icon('fas', 'image')
+              = f.file_field :image, class: 'input-box__image__file'
+        = f.submit 'Send', class: 'submit-btn'
           
  
     
