グループ編集リンク先

--- a/app/assets/stylesheets/main_chat.scss
+++ b/app/assets/stylesheets/main_chat.scss
@@ -20,8 +20,13 @@
     }
 
     &__member {
+      display: flex;
       font-size: 12px;
       color: #999999;
+
+      &__list {
+        list-style: none;
+      }
     }
   }
 
