--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
     .contents__message__user__name
       = message.user.name 
     .contents__message__user__date
-      = message.created_at.strftime("%Y/%m/%d %H:%M")
+      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .contents__message__text
     - if message.content.present?
       %p.contents__message__text__content
