--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.contents__message
+.contents__message{"data-message_id": "#{message.id}"}
   .contents__message__user
     .contents__message__user__name
       = message.user.name 
